[package]
name = "scryfall_sdk_rust"
description = "A light wrapper (SDK) for Scryfall API (https://scryfall.com/docs/api)"
version = "0.1.1"
edition = "2021"
categories = ["api-bindings"]
keywords = ["sdk", "scryfall", "http-api-binding", "http"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dgian/scryfall-sdk-rust"
documenation = "https://docs.rs/scryfall_sdk_rust"
repository = "https://github.com/dgian/scryfall-sdk-rust"
readme = "crates-readme.md"

[features]
full = ["blocking"]
blocking = []

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
strum = "0.24"
strum_macros = "0.24"
time = { version = "0.3", features = ["serde-well-known", "serde-human-readable", "macros"] }
url = { version = "2.2", features = ["serde"] }
uuid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
httpmock = "0.6"
indoc = "1.0"
rstest = "0.13"
tokio = { version = "1.20", features = ["macros", "tokio-macros"] }
